# CorgiTrack

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.vue  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/api/: client.ts  types.ts
desktop/src/components/: DogForm.vue  MemberForm.vue  ModalDialog.vue  StatusBadge.vue  ToastHost.vue  TreatmentForm.vue  UpdateBanner.vue
desktop/src/router/: index.ts
desktop/src/stores/: settings.ts  toast.ts  updater.ts
desktop/src/styles/: global.css
desktop/src/util/: format.ts
desktop/src/views/: Dashboard.vue  Dogs.vue  Family.vue  Settings.vue  Treatments.vue  VetBook.vue
scripts/: set-version.sh
server/: Cargo.toml  Dockerfile
server/migrations/: 0001_bootstrap.sql
server/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  util.rs
server/src/api/: calendar.rs  dogs.rs  doses.rs  households.rs  members.rs  mod.rs  reports.rs  settings.rs  treatments.rs
server/src/bot/: mod.rs
server/src/services/: calendar.rs  mod.rs  reports.rs  schedules.rs  settings.rs
server/tests/: schedules.rs
src/corgitrack/: __init__.py  api.py  bot.py  config.py  db.py  main.py  models.py  schemas.py
src/corgitrack/services/: calendar.py  google_calendar.py  reports.py  schedules.py
tests/: test_schedules.py
