[project]
name = "corgitrack"
version = "0.1.0"
description = "Учет таблеток и прививок собаки с Telegram и синхронизацией календаря."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.5,<4",
    "asyncpg>=0.29,<1",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "icalendar>=5.0,<6",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.130,<3",
    "google-auth>=2.29,<3",
    "google-auth-oauthlib>=1.2,<2",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
