[package]
name = "corgitrack"
version = "2.0.0"
edition = "2021"
description = "Учет таблеток и прививок собаки: API + Telegram-бот + iCal (Rust)."
license = "MIT"

[[bin]]
name = "corgitrack"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "macros",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# rustls вместо native-tls: в Docker-образе не нужен OpenSSL (легче на ARM/Pi).
teloxide = { version = "0.13", default-features = false, features = [
    "macros",
    "ctrlc_handler",
    "rustls",
] }
url = "2"

icalendar = "0.16"
csv = "1"

uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"

dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
