[package]
name = "corgitrack-desktop"
version = "0.1.0"
description = "Десктоп-клиент CorgiTrack поверх Rust API"
authors = ["CorgiTrack"]
edition = "2021"

# Имя библиотеки, которое вызывает main.rs (см. corgitrack_desktop_lib::run).
[lib]
name = "corgitrack_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Лёгкий бинарь — в духе проекта (Raspberry Pi / низкий RAM на сервере).
opt-level = "s"
lto = true
strip = true
